Add homepage and rework hasParty endpoint
